fix: shop - inspiring story spacing

--- a/src/scss/pages/bullionmarkFrontPage.scss
+++ b/src/scss/pages/bullionmarkFrontPage.scss
@@ -594,6 +594,13 @@
         }
 
     }
+
+    &.ShopInspiringStories {
+        padding-top: 60px;
+        @include media($md) {
+            padding-top: 40px;
+        }
+    }
 }
 
 #SectionNewsletter {
